--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 :root {
     --theme-color: #FF42A5;
     --text-color: #534C64;
+    --text-black: #0B0223;
     --text-xxl: 5.0rem;
     --text-xl: 3rem;
     --text-l: 2.8rem;
@@ -12,6 +13,7 @@
 }
 .primary-text-color{color:var(--text-color);}
 .theme-color{color: var(--theme-color);}
+.text-black{color: var(--text-black);}
 .text-gradient{background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);background-clip: text;-webkit-background-clip: text; -webkit-text-fill-color: transparent;}
 .text-xxl{font-size: var(--text-xxl);}
 .text-xl{font-size: var(--text-xl);}
@@ -25,3 +27,37 @@
 .text-700{font-weight: 700;}
 .text-800{font-weight: 800;}
 .text-center{text-align: center;}
+.flex{display: flex;}
+.grid{display: grid;}
+header > nav{
+    padding: 38px 240px;
+}
+header > nav > div{
+    justify-content: space-between;
+    align-items: center;
+}
+header > nav{
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.link > a{
+    text-decoration: none;
+    list-style: none;
+    align-items: center;
+}
+.link{
+    align-items: center;
+}
+.link, .follow-us{
+    gap: 24px;
+}
+.follow-us{
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    align-items: center;
+    padding: 17px 24px;
+}
+.nav-social-logo{
+    align-items: center;
+    gap: 16px;
+}
